--- a/products/sproduct.html
+++ b/products/sproduct.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Website</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <link rel="stylesheet" href="ecom\lookie.css">
+    <link rel="stylesheet" href="/ecom/lookie.css">
 
 </head>
 
 <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
+        <a href="#"><img src="/ecom/img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -39,23 +39,23 @@
 
     <section id="prodetails" class="section-p1">
         <div class="single-pro-image">
-            <img src="ecom/img/products/f1.jpg" width="100%" id="MainImg" alt="">
+            <img src="/ecom/img/products/f1.jpg" width="100%" id="MainImg" alt="">
 
             <div class="small-img-group">
                 <div class="small-img-col">
-                    <img src="img/products/f1.jpg" width="100%" class="small-img" alt="">
+                    <img src="/ecom/img/products/f1.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-group">
                     <div class="small-img-col">
-                        <img src="img/products/f2.jpg" width="100%" class="small-img" alt="">
+                        <img src="/ecom/img/products/f2.jpg" width="100%" class="small-img" alt="">
                     </div>
                     <div class="small-img-group">
                         <div class="small-img-col">
-                            <img src="img/products/f3.jpg" width="100%" class="small-img" alt="">
+                            <img src="/ecom/img/products/f3.jpg" width="100%" class="small-img" alt="">
                         </div>
                         <div class="small-img-group">
                             <div class="small-img-col">
-                                <img src="img/products/f4.jpg " width="100%" class="small-img" alt="">
+                                <img src="/ecom/img/products/f4.jpg " width="100%" class="small-img" alt="">
                             </div>
                         </div>
                     </div>    
