--- a/products/sproduct2.html
+++ b/products/sproduct2.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Website</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/ecom/lookie.css">
 </head>
 
 <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
+        <a href="#"><img src="/ecom/img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
