Shop page updated

--- a/products/sproduct.html
+++ b/products/sproduct.html
@@ -16,12 +16,12 @@
         <a href="#"><img src="/ecom/img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
         <div>
             <ul id="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="shop.html">Shop</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/ecom/index.html">Home</a></li>
+                <li><a class="active" href="/ecom/shop.html">Shop</a></li>
+                <li><a href="/ecom/about.html">About</a></li>
                 <li>
                 <button data-quantity="0" class="btn-cart">
-                    <a href="cart.html" style="text-decoration: none; color: inherit;">
+                    <a href="/ecom/cart.html" style="text-decoration: none; color: inherit;">
                       <svg class="icon-cart" viewBox="0 0 24.38 30.52" height="30.52" width="24.38" xmlns="http://www.w3.org/2000/svg">
                         <path transform="translate(-3.62 -0.85)" d="M28,27.3,26.24,7.51a.75.75,0,0,0-.76-.69h-3.7a6,6,0,0,0-12,0H6.13a.76.76,0,0,0-.76.69L3.62,27.3v.07a4.29,4.29,0,0,0,4.52,4H23.48a4.29,4.29,0,0,0,4.52-4ZM15.81,2.37a4.47,4.47,0,0,1,4.46,4.45H11.35a4.47,4.47,0,0,1,4.46-4.45Zm7.67,27.48H8.13a2.79,2.79,0,0,1-3-2.45L6.83,8.34h3V11a.76.76,0,0,0,1.52,0V8.34h8.92V11a.76.76,0,0,0,1.52,0V8.34h3L26.48,27.4a2.79,2.79,0,0,1-3,2.44Zm0,0"></path>
                       </svg>
@@ -99,7 +99,7 @@
         <span>Summer Collection New Modern Designs</span>
         <div class="pro-container">
             <div class="pro">
-                <img src="img/products/f1.jpg" alt="">
+                <img src="/ecom/img/products/f1.jpg" alt="">
                 <div class="des">
                     <span>ADIDAS</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -115,7 +115,7 @@
                 <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="img/products/f2.jpg" alt="">
+                <img src="/ecom/img/products/f2.jpg" alt="">
                 <div class="des">
                     <span>H&M</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -131,7 +131,7 @@
                 <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="img/products/f3.jpg" alt="">
+                <img src="/ecom/img/products/f3.jpg" alt="">
                 <div class="des">
                     <span>ADIDAS</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -147,7 +147,7 @@
                 <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="img/products/f4.jpg" alt="">
+                <img src="/ecom/img/products/f4.jpg" alt="">
                 <div class="des">
                     <span>H&M</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -203,11 +203,11 @@
             <h4>Install App</h4>
             <p>From App Store or Google Play Store</p>
             <div class="row">
-                <img src="img/pay/app.jpg" alt="">
-                <img src="img/pay/play.jpg" alt="">
+                <img src="/ecom/img/pay/app.jpg" alt="">
+                <img src="/ecom/img/pay/play.jpg" alt="">
             </div>
                 <p>Secured Payment Gateway</p>
-                <img src="img/pay/pay.png" alt="">
+                <img src="/ecom/img/pay/pay.png" alt="">
             </div>
         <div class="copyright">
             <p>@2025, Yeshwanth Sunkara - E-commerce Website</p>
