--- a/cart.html
+++ b/cart.html
@@ -125,8 +125,8 @@
         <div class="col">
             <img class="logo" src="img/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address:</strong>Hyderabad,Telangana </p>
-            <p><strong>Phone:</strong>+91 7234567892 </p>
+            <span><strong>Address:</strong>Hyderabad,Telangana </span>
+            <span><strong>Phone:</strong>+91 7234567892 </span>
         </div>
     
         <div class="col">
@@ -146,7 +146,6 @@
             </div>
     
             <div class="col install">
-                <h4>Install App</h4>
                 <p>From App Store or Google Play Store</p>
                 <div class="row">
                     <img src="img/pay/app.jpg" alt="">
@@ -156,7 +155,7 @@
                     <img src="img/pay/pay.png" alt="">
                 </div>
             <div class="copyright">
-                <p>@2025, Yeshwanth Sunkara - E-commerce Website</p>
+                <span>@2025, Yeshwanth Sunkara - E-commerce Website</span>
             </div>
     </footer>
     <script src="script.js"></script>
