--- a/shop.html
+++ b/shop.html
@@ -355,7 +355,7 @@
             <img src="img/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>@2025, Yeshwanth Sunkara - E-commerce Website</p>
+            <span>@2025, Yeshwanth Sunkara - E-commerce Website</span>
         </div>
     </footer>
     <script src="script.js"></script>
