--- a/products/sproduct.html
+++ b/products/sproduct.html
@@ -20,14 +20,17 @@
                 <li><a class="active" href="/ecom/shop.html">Shop</a></li>
                 <li><a href="/ecom/about.html">About</a></li>
                 <li>
-                <button data-quantity="0" class="btn-cart">
-                    <a href="/ecom/cart.html" style="text-decoration: none; color: inherit;">
-                      <svg class="icon-cart" viewBox="0 0 24.38 30.52" height="30.52" width="24.38" xmlns="http://www.w3.org/2000/svg">
-                        <path transform="translate(-3.62 -0.85)" d="M28,27.3,26.24,7.51a.75.75,0,0,0-.76-.69h-3.7a6,6,0,0,0-12,0H6.13a.76.76,0,0,0-.76.69L3.62,27.3v.07a4.29,4.29,0,0,0,4.52,4H23.48a4.29,4.29,0,0,0,4.52-4ZM15.81,2.37a4.47,4.47,0,0,1,4.46,4.45H11.35a4.47,4.47,0,0,1,4.46-4.45Zm7.67,27.48H8.13a2.79,2.79,0,0,1-3-2.45L6.83,8.34h3V11a.76.76,0,0,0,1.52,0V8.34h8.92V11a.76.76,0,0,0,1.52,0V8.34h3L26.48,27.4a2.79,2.79,0,0,1-3,2.44Zm0,0"></path>
-                      </svg>
-                      <span class="quantity"></span>
-                    </a>
-                  </button>
+                    <button data-quantity="0" class="btn-cart">
+                        <a href="/ecom/cart.html" style="text-decoration: none; color: inherit;">
+                            <svg class="icon-cart" viewBox="0 0 24.38 30.52" height="30.52" width="24.38"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path transform="translate(-3.62 -0.85)"
+                                    d="M28,27.3,26.24,7.51a.75.75,0,0,0-.76-.69h-3.7a6,6,0,0,0-12,0H6.13a.76.76,0,0,0-.76.69L3.62,27.3v.07a4.29,4.29,0,0,0,4.52,4H23.48a4.29,4.29,0,0,0,4.52-4ZM15.81,2.37a4.47,4.47,0,0,1,4.46,4.45H11.35a4.47,4.47,0,0,1,4.46-4.45Zm7.67,27.48H8.13a2.79,2.79,0,0,1-3-2.45L6.83,8.34h3V11a.76.76,0,0,0,1.52,0V8.34h8.92V11a.76.76,0,0,0,1.52,0V8.34h3L26.48,27.4a2.79,2.79,0,0,1-3,2.44Zm0,0">
+                                </path>
+                            </svg>
+                            <span class="quantity"></span>
+                        </a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -58,10 +61,10 @@
                                 <img src="/ecom/img/products/f4.jpg " width="100%" class="small-img" alt="">
                             </div>
                         </div>
-                    </div>    
+                    </div>
                 </div>
             </div>
-        </div>    
+        </div>
 
         <div class="single-pro-details">
             <h6>Home / T-shirts</h6>
@@ -75,21 +78,18 @@
                 <option>XL</option>
                 <option>XXL</option>
             </select>
-                <input type="number" value="1">
- 
-<div data-tooltip="Price:₹399" class="oho">
-<div class="button-wrapper">
-  <div class="text">Buy Now</div>
-    <span class="icon">
-      <svg viewBox="0 0 16 16" class="bi bi-cart2" fill="currentColor" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
-  <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"></path>
-</svg>
-    </span>
-  </div>
-</div>
-                <h4>Product Details</h4>
-                <span>Make a bold statement with this Men's Abstract Floral Casual Shirt, featuring a vibrant mix of mustard yellow, teal, red, white, and light purple
-                in an artistic floral design. Crafted from lightweight and breathable fabric, this short-sleeve button-up 
+            <input type="number" value="1">
+                <button class="ohio">
+                    Buy Now
+                    <div class="hoverEffect">
+                        <div></div>
+                    </div>
+                </button>
+            <h4>Product Details</h4>
+            <span>Make a bold statement with this Men's Abstract Floral Casual Shirt, featuring a vibrant mix of mustard
+                yellow, teal, red, white, and light purple
+                in an artistic floral design. Crafted from lightweight and breathable fabric, this short-sleeve
+                button-up
                 shirt ensures all-day comfort while keeping you stylish.</span>
         </div>
     </section>
@@ -162,41 +162,41 @@
                 </div>
                 <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
             </div>
-</section>
+    </section>
 
- <section id="newsletter" class="section-p1 section-m1">
-    <div class="newstext">
-        <h4>Sign Up for Newsletter</h4>
-        <p>Get E-mail updates and more latest updates and <span>special offers</span> </p>
-    </div>
-    <div class="form">
-        <input type="text" placeholder="Your E-mail address">
-        <button class="normal">Sign Up</button>
-    </div>
-</section>
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign Up for Newsletter</h4>
+            <p>Get E-mail updates and more latest updates and <span>special offers</span> </p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your E-mail address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
 
-<footer class="section-p1">
-    <div class="col">
-        <img class="logo" src="img/logo.png" alt="">
-        <h4>Contact</h4>
-        <span><strong>Address:</strong>Hyderabad,Telangana </span>
-        <span><strong>Phone:</strong>+91 7234567892 </span>
-    </div>
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" src="img/logo.png" alt="">
+            <h4>Contact</h4>
+            <span><strong>Address:</strong>Hyderabad,Telangana </span>
+            <span><strong>Phone:</strong>+91 7234567892 </span>
+        </div>
 
-    <div class="col">
-    <h4>About</h4>
-    <a href="#">About Us</a>
-    <a href="#">Delivery Information</a>
-    <a href="#">Terms & Conditions</a>
-    <a href="#">Contact Us</a>
-    </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
 
-    <div class="col">
-        <h4>My Account</h4>
-        <a href="#">Sign In</a>
-        <a href="#">View Cart</a>
-        <a href="#">My Wishlist</a>
-        <a href="#">Help</a>
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Help</a>
         </div>
 
         <div class="col install">
@@ -206,26 +206,26 @@
                 <img src="/ecom/img/pay/app.jpg" alt="">
                 <img src="/ecom/img/pay/play.jpg" alt="">
             </div>
-                <p>Secured Payment Gateway</p>
-                <img src="/ecom/img/pay/pay.png" alt="">
-            </div>
-        <div class="copyright">
-            <p>@2025, Yeshwanth Sunkara - E-commerce Website</p>
+            <p>Secured Payment Gateway</p>
+            <img src="/ecom/img/pay/pay.png" alt="">
         </div>
-</footer>
+        <div class="copyright">
+            <span>@2025, Yeshwanth Sunkara - E-commerce Website</span>
+        </div>
+    </footer>
 
-<script>
-    var MainImg = document.getElementById("MainImg");
-    var smallimg = document.querySelectorAll(".small-img");
-    
-    smallimg.forEach(function(img) {
-        img.onclick = function() {
-            MainImg.src = img.src;
-        };
-    });
-</script>
+    <script>
+        var MainImg = document.getElementById("MainImg");
+        var smallimg = document.querySelectorAll(".small-img");
 
-<script src="ecom/script.js"></script>
+        smallimg.forEach(function (img) {
+            img.onclick = function () {
+                MainImg.src = img.src;
+            };
+        });
+    </script>
+
+    <script src="ecom/script.js"></script>
 </body>
 
 </html>
