--- a/products/sproduct1.html
+++ b/products/sproduct1.html
@@ -80,19 +80,13 @@
             </select>
             <input type="number" value="1">
 
-            <div data-tooltip="Price:₹399" class="oho">
-                <div class="button-wrapper">
-                    <div class="text">Buy Now</div>
-                    <span class="icon">
-                        <svg viewBox="0 0 16 16" class="bi bi-cart2" fill="currentColor" height="16" width="16"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z">
-                            </path>
-                        </svg>
-                    </span>
+            <button class="ohio">
+                Buy Now
+                <div class="hoverEffect">
+                    <div></div>
                 </div>
-            </div>
+            </button>
+            
             <h4>Product Details</h4>
             <span>Make a bold statement with this Men's Abstract Floral Casual Shirt, featuring a vibrant mix of mustard
                 yellow, teal, red, white, and light purple
@@ -217,7 +211,7 @@
             <img src="/ecom/img/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>@2025, Yeshwanth Sunkara - E-commerce Website</p>
+            <span>@2025, Yeshwanth Sunkara - E-commerce Website</span>
         </div>
     </footer>
 
