--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
+        <a href="/ecom/index.html"><img src="img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
@@ -42,7 +42,9 @@
         <h2>Super value deals</h2>
         <h1>On all products</h1>
         <p>Save more with coupons & up to 70% off!</p>
+        <a href="/ecom/shop.html" target="_blank">
         <button>Shop Now</button>
+        </a>        
     </section>
 
     <section id="feature" class="section-p1">
@@ -395,7 +397,7 @@
 
     <div class="col">
     <h4>About</h4>
-    <a href="#">About Us</a>
+    <a href="/ecom/about.html">About Us</a>
     <a href="#">Delivery Information</a>
     <a href="#">Terms & Conditions</a>
     <a href="#">Contact Us</a>
@@ -404,13 +406,12 @@
     <div class="col">
         <h4>My Account</h4>
         <a href="#">Sign In</a>
-        <a href="#">View Cart</a>
+        <a href="/ecom/cart.html">View Cart</a>
         <a href="#">My Wishlist</a>
         <a href="#">Help</a>
         </div>
 
         <div class="col install">
-            <h4>Install App</h4>
             <p>From App Store or Google Play Store</p>
             <div class="row">
                 <img src="img/pay/app.jpg" alt="">
