--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
 
 <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
+        <a href="/ecom/index.html"><img src="img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -325,13 +325,13 @@
         <div class="col">
             <img class="logo" src="img/logo.png" alt="">
             <h4>Contact</h4>
-            <p><strong>Address:</strong>Hyderabad,Telangana </p>
-            <p><strong>Phone:</strong>+91 7234567892 </p>
+            <span><strong>Address:</strong>Hyderabad,Telangana </span>
+            <span><strong>Phone:</strong>+91 7234567892 </span>
         </div>
 
         <div class="col">
             <h4>About</h4>
-            <a href="#">About Us</a>
+            <a href="/ecom/about.html">About Us</a>
             <a href="#">Delivery Information</a>
             <a href="#">Terms & Conditions</a>
             <a href="#">Contact Us</a>
@@ -340,18 +340,18 @@
         <div class="col">
             <h4>My Account</h4>
             <a href="#">Sign In</a>
-            <a href="#">View Cart</a>
+            <a href="/ecom/cart.html">View Cart</a>
             <a href="#">My Wishlist</a>
             <a href="#">Help</a>
         </div>
 
         <div class="col install">
-            <p>From App Store or Google Play Store</p>
+            <span>From App Store or Google Play Store</span>
             <div class="row">
                 <img src="img/pay/app.jpg" alt="">
                 <img src="img/pay/play.jpg" alt="">
             </div>
-            <p>Secured Payment Gateway</p>
+            <span>Secured Payment Gateway</span>
             <img src="img/pay/pay.png" alt="">
         </div>
         <div class="copyright">
