--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
 
 <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
+        <a href="/ecom/index.html"><img src="img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
@@ -160,5 +160,4 @@
     </footer>
     <script src="script.js"></script>
 </body>
-
 </html>
