--- a/products/sproduct.html
+++ b/products/sproduct.html
@@ -13,7 +13,7 @@
 
 <body>
     <section id="header">
-        <a href="#"><img src="/ecom/img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
+        <a href="/ecom/index.html"><img src="/ecom/img/logo.png" class="logo" alt="E-commerce Website Logo"></a>
         <div>
             <ul id="navbar">
                 <li><a href="/ecom/index.html">Home</a></li>
