--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
                 <li><a href="about.html">About</a></li>
                 <li>
                     <button data-quantity="0" class="btn-cart">
-                      <a href="cart.html" style="text-decoration: none; color: inherit;">
-                        <svg class="icon-cart" viewBox="0 0 24.38 30.52" height="30.52" width="24.38" xmlns="http://www.w3.org/2000/svg">
-                          <title>icon-cart</title>
-                          <path transform="translate(-3.62 -0.85)" d="M28,27.3,26.24,7.51a.75.75,0,0,0-.76-.69h-3.7a6,6,0,0,0-12,0H6.13a.76.76,0,0,0-.76.69L3.62,27.3v.07a4.29,4.29,0,0,0,4.52,4H23.48a4.29,4.29,0,0,0,4.52-4ZM15.81,2.37a4.47,4.47,0,0,1,4.46,4.45H11.35a4.47,4.47,0,0,1,4.46-4.45Zm7.67,27.48H8.13a2.79,2.79,0,0,1-3-2.45L6.83,8.34h3V11a.76.76,0,0,0,1.52,0V8.34h8.92V11a.76.76,0,0,0,1.52,0V8.34h3L26.48,27.4a2.79,2.79,0,0,1-3,2.44Zm0,0"></path>
-                        </svg>
-                        <span class="quantity"></span>
-                      </a>
+                        <a href="cart.html" style="text-decoration: none; color: inherit;">
+                            <svg class="icon-cart" viewBox="0 0 24.38 30.52" height="30.52" width="24.38"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>icon-cart</title>
+                                <path transform="translate(-3.62 -0.85)"
+                                    d="M28,27.3,26.24,7.51a.75.75,0,0,0-.76-.69h-3.7a6,6,0,0,0-12,0H6.13a.76.76,0,0,0-.76.69L3.62,27.3v.07a4.29,4.29,0,0,0,4.52,4H23.48a4.29,4.29,0,0,0,4.52-4ZM15.81,2.37a4.47,4.47,0,0,1,4.46,4.45H11.35a4.47,4.47,0,0,1,4.46-4.45Zm7.67,27.48H8.13a2.79,2.79,0,0,1-3-2.45L6.83,8.34h3V11a.76.76,0,0,0,1.52,0V8.34h8.92V11a.76.76,0,0,0,1.52,0V8.34h3L26.48,27.4a2.79,2.79,0,0,1-3,2.44Zm0,0">
+                                </path>
+                            </svg>
+                            <span class="quantity"></span>
+                        </a>
                     </button>
-                  </li>
+                </li>
             </ul>
         </div>
         <div id="mobile">
@@ -43,8 +46,8 @@
         <h1>On all products</h1>
         <p>Save more with coupons & up to 70% off!</p>
         <a href="/ecom/shop.html" target="_blank">
-        <button>Shop Now</button>
-        </a>        
+            <button>Shop Now</button>
+        </a>
     </section>
 
     <section id="feature" class="section-p1">
@@ -342,73 +345,73 @@
                     <h4>₹655</h4>
                 </div>
                 <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-</section>
+    </section>
 
-<section id="sm-banner" class="section-p1">
-    <div class="banner-box">
-        <h4>Amazing Deals</h4>
-        <h2>Buy 1 Get 1 Free</h2>
-        <span>The best dresses are at sale Now</span>
-        <button class="white">Learn More</button>
-    </div>
+    <section id="sm-banner" class="section-p1">
+        <div class="banner-box">
+            <h4>Amazing Deals</h4>
+            <h2>Buy 1 Get 1 Free</h2>
+            <span>The best dresses are at sale Now</span>
+            <button class="white">Learn More</button>
+        </div>
         <div class="banner-box banner-box2">
             <h4>Spring/Summer</h4>
             <h2>Upcoming Season</h2>
             <span>The best dresses are at sale Now</span>
             <button class="white">Collection</button>
-    </div>
-</section>
+        </div>
+    </section>
 
-<section id="banner3" class="">
-    <div class="banner-box">
-    <h2>SEASONAL SALE</h2>
-    <h3>Winter Collection -50% OFF</h3>
-    </div>
-    <div class="banner-box banner-box2">
-        <h2>SEASONAL SALE</h2>
-        <h3>Winter Collection -50% OFF</h3>
+    <section id="banner3" class="">
+        <div class="banner-box">
+            <h2>SEASONAL SALE</h2>
+            <h3>Winter Collection -50% OFF</h3>
+        </div>
+        <div class="banner-box banner-box2">
+            <h2>SEASONAL SALE</h2>
+            <h3>Winter Collection -50% OFF</h3>
         </div>
         <div class="banner-box banner-box3">
             <h2>SEASONAL SALE</h2>
             <h3>Winter Collection -50% OFF</h3>
-            </div>
-</section>
+        </div>
+    </section>
 
-<section id="newsletter" class="section-p1 section-m1">
-    <div class="newstext">
-        <h4>Sign Up for Newsletter</h4>
-        <p>Get E-mail updates and more latest updates and <span>special offers</span> </p>
-    </div>
-    <div class="form">
-        <input type="text" placeholder="Your E-mail address">
-        <button class="normal">Sign Up</button>
-    </div>
-</section>
+    <section id="newsletter" class="section-p1 section-m1">
+        <div class="newstext">
+            <h4>Sign Up for Newsletter</h4>
+            <p>Get E-mail updates and more latest updates and <span>special offers</span> </p>
+        </div>
+        <div class="form">
+            <input type="text" placeholder="Your E-mail address">
+            <button class="normal">Sign Up</button>
+        </div>
+    </section>
 
-<footer class="section-p1">
-    <div class="col">
-        <img class="logo" src="img/logo.png" alt="">
-        <h3>Contact</h3>
-        <br>
-        <span><strong>Address:</strong>Hyderabad,Telangana </span>
-        <br>
-        <span><strong>Phone:</strong>+91 7234567892 </span>
-    </div>
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" href="index.html" src="img/logo.png" alt="">
+            <h3>Contact</h3>
+            <br>
+            <span><strong>Address:</strong>Hyderabad,Telangana </span>
+            <br>
+            <span><strong>Phone:</strong>+91 7234567892 </span>
+        </div>
 
-    <div class="col">
-    <h4>About</h4>
-    <a href="/ecom/about.html">About Us</a>
-    <a href="#">Delivery Information</a>
-    <a href="#">Terms & Conditions</a>
-    <a href="#">Contact Us</a>
-    </div>
+        <div class="col">
+            <h4>About</h4>
+            <a href="/ecom/about.html">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
 
-    <div class="col">
-        <h4>My Account</h4>
-        <a href="#">Sign In</a>
-        <a href="/ecom/cart.html">View Cart</a>
-        <a href="#">My Wishlist</a>
-        <a href="#">Help</a>
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="/ecom/cart.html">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Help</a>
         </div>
 
         <div class="col install">
@@ -417,14 +420,14 @@
                 <img src="img/pay/app.jpg" alt="">
                 <img src="img/pay/play.jpg" alt="">
             </div>
-                <p>Secured Payment Gateway</p>
-                <img src="img/pay/pay.png" alt="">
-            </div>
+            <p>Secured Payment Gateway</p>
+            <img src="img/pay/pay.png" alt="">
+        </div>
         <div class="copyright">
             <span>@2025, Yeshwanth Sunkara - E-commerce Website</span>
         </div>
-</footer>
-<script src="script.js"></script>
+    </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
