--- a/products/sproduct.html
+++ b/products/sproduct.html
@@ -69,7 +69,7 @@
         <div class="single-pro-details">
             <h6>Home / T-shirts</h6>
             <h4>Men's Fashion T-shirts</h4>
-            <h2>₹399</h2>
+            <h2>₹540</h2>
             <select>
                 <option>Select Size</option>
                 <option>S</option>
@@ -78,13 +78,14 @@
                 <option>XL</option>
                 <option>XXL</option>
             </select>
-            <input type="number" value="1">
-                <button class="ohio">
-                    Buy Now
-                    <div class="hoverEffect">
-                        <div></div>
-                    </div>
-                </button>
+            <input type="number" value="1" id="productQuantity">
+<button class="ohio" id="buyNowButton" data-id="123" data-name="Product Name" data-price="100">
+    Buy Now
+    <div class="hoverEffect">
+        <div></div>
+    </div>
+</button>
+
             <h4>Product Details</h4>
             <span>Make a bold statement with this Men's Abstract Floral Casual Shirt, featuring a vibrant mix of mustard
                 yellow, teal, red, white, and light purple
