--- a/every/index.html
+++ b/every/index.html
@@ -72,8 +72,7 @@
             <h6>24/7 Support</h6>
         </div>
     </section>
-
-    <section id="product1" class="section-p1">
+<!--    <section id="product1" class="section-p1">
         <h2>Featured Products</h2>
         <p>Summer Collection</p>
         <div class="pro-container">
@@ -428,6 +427,8 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    -->
+
 </body>
 
 </html>
