--- a/one.html
+++ b/one.html
@@ -3,33 +3,33 @@
 
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
-  <title>KLH</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Florent</title>
 </head>
 
 <body>
-  <section class="header">
-    <nav>
-      <!--
-            <div class="logo">
-            <img src="assets/logo.png" alt="Logo">
-          </div>
-          -->
-      <div class="nav-links">
-        <ul>
-        <li><a href="">About</a></li>
-          <li><a href="">Works</a></li>
-          <div class = "title">
-          <li><a href="">FLORENT</a></li>
-        </div>
-          <li><a href="">Team</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </div>
+    <section class="header">
+        <nav>
+            <div class="nav-left">
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Works</a></li>
+                </ul>
+            </div>
+            <div class="title">
+                <a href="">FLORENT</a>
+            </div>
+            <div class="nav-right">
+                <ul>
+                    <li><a href="">Team</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
 
-                    <!--
+        <!--
                      <li>
                         <button data-quantity="0" class="btn-cart"> 
                             <a href="cart.html" style="text-decoration: none; color: inherit;">
@@ -45,12 +45,13 @@
                         </button>
                     </li>
                     -->
-                </ul>
-            </div>
-            
-        </section>
+    <div class = "image-one">
+<img src="images/homepage.png" alt="Time"> 
+    </div>
+    </section>
 
-<body>
+    <body>
 
-</body>
+    </body>
+
 </html>
