--- a/one.html
+++ b/one.html
@@ -48,6 +48,12 @@
     <div class = "image-one">
 <img src="images/homepage.png" alt="Time"> 
     </div>
+    <div class = "text-stack">
+        <p>The Pinnacle of Sophistication</p>
+    </div>
+    <div class = 'line'>
+    <hr>
+</div>
     </section>
 
     <body>
