--- a/one.html
+++ b/one.html
@@ -14,8 +14,8 @@
         <nav>
             <div class="nav-left">
                 <ul>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Works</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="works.html">Works</a></li>
                 </ul>
             </div>
             <div class="title">
@@ -23,8 +23,8 @@
             </div>
             <div class="nav-right">
                 <ul>
-                    <li><a href="">Team</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="team.html">Team</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
