--- a/one.html
+++ b/one.html
@@ -51,6 +51,24 @@
     <div class = "text-stack">
         <p>The Pinnacle of Sophistication</p>
     </div>
+
+    <!-- Discover Button -->
+    <a href="">
+        <button class="disc">
+            <p>DISCOVER</p>
+            <svg
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="3"
+            >
+              <path
+                stroke-linejoin="round"
+                d="M14 5l7 7m0 0l-7 7m7-7H3"
+              ></path>
+            </svg>
+          </button>
+      </a>
+      
     <div class = 'line'>
     <hr>
 </div>
