--- a/second.html
+++ b/second.html
@@ -11,6 +11,9 @@
 
 <bodyh>
     <section class="header">
+    <div class = "about-text">
+        <h1>ABOUT US</h1>
+    </div>
     <div class = "image-two">
     <img src="images/about-1.png" alt="Woman"> 
     </div>
