--- a/second.html
+++ b/second.html
@@ -11,8 +11,11 @@
 
 <bodyh>
     <section class="header">
-    <div class = "about-text">
+    <div class = "about-heading">
         <h1>ABOUT US</h1>
+    </div>
+    <div class = "about-text">
+        <p>At FLORENT, we redefine elegance with meticulously crafted luxury clothing that exudes sophistication and timeless style</p>
     </div>
     <div class = "image-two">
     <img src="images/about-1.png" alt="Woman"> 
